# FastAPI-DependencyInjection.Test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/middleware/: __init__.py  error_handler.py  logging.py  request_trace.py
app/api/middleware/util/: async_interator.py
app/api/route/: __init__.py  auth.py  health_check.py  user.py
app/controller/repository/: user.py
app/controller/service/: auth.py  health_check.py  user.py
app/core/: database.py  email.py  rabbitmq.py
app/core/container/: __init__.py
app/core/settings/: __init__.py  app.py  database.py  util.py
app/domain/model/: user.py
app/domain/schema/: auth.py  user.py
app/domain/schema/validators/: datetime.py  password.py
app/util/templates/: confirmation.html
tests/http/: test_main.http
tests/unit/: rabbitmq.py
